Add Binding Shard item and sound when bind pos

--- a/src/main/resources/assets/simple_teleporter/lang/en_us.json
+++ b/src/main/resources/assets/simple_teleporter/lang/en_us.json
@@ -1,4 +1,5 @@
 {
     "item.simple_teleporter.binding_tool": "Binding Tool",
+    "item.simple_teleporter.binding_shard": "Binding Shard",
     "block.simple_teleporter.teleport_pad": "Teleport Pad"
 }
